@@ -2,18 +2,17 @@ package com.finarg.investments.stocks.service;
 
 import com.finarg.investments.stocks.client.DolaritoMervalClient;
 import com.finarg.investments.stocks.dto.StockDTO;
+import com.finarg.shared.constants.FinancialConstants;
+import com.finarg.shared.util.BigDecimalUtils;
+import com.finarg.shared.util.DateTimeUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,47 +41,35 @@ public class StockService {
                         stock -> POPULAR_STOCKS.indexOf(stock.getTicker())
                 ))
                 .map(this::mapToStockDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private StockDTO mapToStockDTO(DolaritoMervalClient.StockItem stock) {
-        LocalDateTime lastUpdate = stock.getTimestampCotizacion() != null
-                ? LocalDateTime.ofInstant(Instant.ofEpochMilli(stock.getTimestampCotizacion()), ZoneId.systemDefault())
-                : LocalDateTime.now();
+        BigDecimal currentPrice = stock.getUltOperado() != null
+                ? stock.getUltOperado()
+                : stock.getCierreAnterior();
+
+        BigDecimal changePercent = BigDecimalUtils.orZero(stock.getVariacion());
+        BigDecimal change = BigDecimalUtils.percentageChange(stock.getCierreAnterior(), changePercent);
 
         BigDecimal volume = stock.getVolumen() != null
                 ? new BigDecimal(stock.getVolumen())
                 : BigDecimal.ZERO;
 
-        BigDecimal currentPrice = stock.getUltOperado() != null
-                ? stock.getUltOperado()
-                : stock.getCierreAnterior();
-
-        BigDecimal changePercent = stock.getVariacion() != null
-                ? stock.getVariacion()
-                : BigDecimal.ZERO;
-
-        BigDecimal change = BigDecimal.ZERO;
-        if (stock.getCierreAnterior() != null && changePercent != null) {
-            change = stock.getCierreAnterior()
-                    .multiply(changePercent)
-                    .divide(new BigDecimal("100"), 2, BigDecimal.ROUND_HALF_UP);
-        }
-
         String currency = stock.getMoneda() != null
                 ? stock.getMoneda().getSimbolo()
-                : "ARS";
+                : FinancialConstants.DEFAULT_CURRENCY;
 
         return StockDTO.builder()
                 .ticker(stock.getTicker() != null ? stock.getTicker() : "")
                 .companyName(stock.getNombre() != null ? stock.getNombre() : stock.getTicker())
-                .currentPrice(currentPrice != null ? currentPrice : BigDecimal.ZERO)
+                .currentPrice(BigDecimalUtils.orZero(currentPrice))
                 .change(change)
-                .changePercent(changePercent != null ? changePercent : BigDecimal.ZERO)
+                .changePercent(changePercent)
                 .volume(volume)
                 .marketCap(null)
                 .currency(currency)
-                .lastUpdate(lastUpdate)
+                .lastUpdate(DateTimeUtils.fromEpochMillis(stock.getTimestampCotizacion()))
                 .build();
     }
 }
